--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>New Branch</title>
-</head>
-<body>
-	
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Navigation Example</title>
+  </head>
+  <!-- https://itnext.io/build-a-single-page-web-app-javascript-and-the-dom-90c99b08f8a9
+  -->
+  <body>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+
+    <div id="app"></div>
+    <script src="main-1.js"></script>
+  </body>
 </html>
