--- a/index.html
+++ b/index.html
@@ -2,15 +2,31 @@
   <head>
     <meta charset="utf-8">
     <title>Navigation Example</title>
+    <style>
+      body{
+        max-width: 600px;
+        margin: 0 auto;
+        padding: 20px;
+      }
+      a {
+        display: inline-block;
+        padding: 5px 10px;
+        background-color: #eee;
+        text-decoration: none;
+        font-size: x-large;
+      }
+      p {
+        font-size: 18px;
+      }
+    </style>
   </head>
-  <!-- https://itnext.io/build-a-single-page-web-app-javascript-and-the-dom-90c99b08f8a9
-  -->
   <body>
     <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
 
     <div id="app"></div>
-    <script src="main-1.js"></script>
+
+    <script src="script.js"></script>
   </body>
 </html>
