memisah file css agar file html mudah dipahami

--- a/index.html
+++ b/index.html
@@ -1,32 +1,20 @@
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Navigation Example</title>
-    <style>
-      body{
-        max-width: 600px;
-        margin: 0 auto;
-        padding: 20px;
-      }
-      a {
-        display: inline-block;
-        padding: 5px 10px;
-        background-color: #eee;
-        text-decoration: none;
-        font-size: x-large;
-      }
-      p {
-        font-size: 18px;
-      }
-    </style>
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Membuat beberapa Halaman Web dengan satu file index.html saja menggunakan Javascript dan DOM</title>
+  <link rel="stylesheet" href="style.css">
+</head>
   <body>
     <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
 
-    <div id="app"></div>
+    <div id="article"></div>
 
+    <p><em>*Perhatikan URL di browser ketika mengklik menu di atas.</em></p>
+    <a href="https://github.com/miftawidaya/halaman-web-tunggal-dom" class="code">Lihat Kode</a>
     <script src="script.js"></script>
   </body>
 </html>
